learning_programs/i2c-display-example/build/log/idf_py_stderr_output_26559
In file included from /home/danny/esp-idf/projects/learning_programs/i2c-display-example/main/i2c-display-example.c:2:
/home/danny/esp-idf/components/esp_common/include/esp_err.h:115:28: error: expected identifier or '(' before 'do'
  115 | #define ESP_ERROR_CHECK(x) do {                                         \
      |                            ^~
/home/danny/esp-idf/projects/learning_programs/i2c-display-example/main/i2c-display-example.c:20:1: note: in expansion of macro 'ESP_ERROR_CHECK'
   20 | ESP_ERROR_CHECK(i2c_new_master_bus(&i2c_bus_config, &bus_handle));
      | ^~~~~~~~~~~~~~~
/home/danny/esp-idf/components/esp_common/include/esp_err.h:121:7: error: expected identifier or '(' before 'while'
  121 |     } while(0)
      |       ^~~~~
/home/danny/esp-idf/projects/learning_programs/i2c-display-example/main/i2c-display-example.c:20:1: note: in expansion of macro 'ESP_ERROR_CHECK'
   20 | ESP_ERROR_CHECK(i2c_new_master_bus(&i2c_bus_config, &bus_handle));
      | ^~~~~~~~~~~~~~~
/home/danny/esp-idf/components/esp_common/include/esp_err.h:115:28: error: expected identifier or '(' before 'do'
  115 | #define ESP_ERROR_CHECK(x) do {                                         \
      |                            ^~
/home/danny/esp-idf/projects/learning_programs/i2c-display-example/main/i2c-display-example.c:29:1: note: in expansion of macro 'ESP_ERROR_CHECK'
   29 | ESP_ERROR_CHECK(i2c_master_bus_add_device(bus_handle, &dev_cfg, &dev_handle));
      | ^~~~~~~~~~~~~~~
/home/danny/esp-idf/components/esp_common/include/esp_err.h:121:7: error: expected identifier or '(' before 'while'
  121 |     } while(0)
      |       ^~~~~
/home/danny/esp-idf/projects/learning_programs/i2c-display-example/main/i2c-display-example.c:29:1: note: in expansion of macro 'ESP_ERROR_CHECK'
   29 | ESP_ERROR_CHECK(i2c_master_bus_add_device(bus_handle, &dev_cfg, &dev_handle));
      | ^~~~~~~~~~~~~~~
make[2]: *** [esp-idf/main/CMakeFiles/__idf_main.dir/build.make:76: esp-idf/main/CMakeFiles/__idf_main.dir/i2c-display-example.c.obj] Error 1
make[1]: *** [CMakeFiles/Makefile2:5672: esp-idf/main/CMakeFiles/__idf_main.dir/all] Error 2
make: *** [Makefile:136: all] Error 2
